# Bosch-Etch-Process-Simulator

./: .gitignore  BoschEtchProcess.sln  README.md
BoschEtchProcess/: BoschEtchProcess.rc  CMakeLists.txt  CMakeSettings.json  Resource.h  vcpkg.json
BoschEtchProcess/Imgui/backend/: imgui_impl_opengl3.cpp
BoschEtchProcess/include/: Measurments.h  Mesh.h  settings.h  shader.h  simulation.h  structures.h
BoschEtchProcess/include/glad/: glad.h
BoschEtchProcess/shaders/: fragment.shader  march.comp.shader  mesh.comp.shader  particle.init.shader  resolveHits.shader  simulation.h  vertex.shader
BoschEtchProcess/src/: Measurments.cpp  Mesh.cpp  glad.c  main.cpp  shader.cpp  simulation.cpp  structures.cpp
